# JsonParser

./: .gitignore  CMakeLists.txt  JsonParser.sln  JsonParser.vcxproj  JsonParser.vcxproj.filters  Main.cpp  Parser.h  README.md  SIMDFunctions.h  benchmark.cpp  parser_templates.h  test.json  test_main.cpp
JsonParser/x64/Debug/: JsonParser.exe.recipe  JsonParser.ilk  Main.asm  Value.asm  Writer.asm  vc145.idb
JsonParser/x64/Debug/JsonParser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  JsonParser.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
JsonParser/x64/Release/: JsonParser.exe.recipe  JsonParser.iobj  JsonParser.ipdb  Main.asm  Value.asm  Writer.asm  benchmark.asm  test_main.asm
JsonParser/x64/Release/JsonParser.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  JsonParser.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
ValueTypes/: Array.h  Bool.cpp  Bool.h  Null.cpp  Null.h  Number.h  Object.h  String.h  Value.cpp  Value.h
cmake/: JsonParserConfig.cmake.in
deprecated/: Parser.h
include/JsonParser/: ContainerParser.h  Parser.h  StreamParser.h  StrictContainerParser.h  StrictStreamParser.h  Value.h
include/JsonParser/Utils/: MappedFile.h
install/: JsonParserConfig.cmake.in
install/clang-release/include/JsonParser/: StreamParser.h
install/mingw-debug/include/JsonParser/Utils/: Macros.h
install/msvc-debug/include/JsonParser/: Value.h
install/msvc-release/include/JsonParser/: StreamParser.h  Value.h
src/ValueTypes/: Value.cpp
tests/: Main.cpp  benchmark.cpp  example.cpp  test_main.cpp
